# duosat

./: .gitattributes
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/duosat/tv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: goalbit_android.cpp
app/src/main/cpp/goalbit/: func.h  gpa.cpp  gpa.h  types.h
app/src/main/cpp/miniupnpc/: connecthostport.c  minisoap.c  miniupnpc.c  miniwget.c
app/src/main/java/com/duosat/tv/adapter/: ChannelMenuListAdapter.java  EpgListAdapter.java  GridVideoAdapter.java  LiveMenuListAdapter.java  MenuListAdapter.java  RecyclerScreenShotAdapter.java  ViewPagerCarouselAdapter.java
app/src/main/java/com/duosat/tv/http/: AppController.java  DuosatAPI.java  DuosatAPIConstant.java  LruBitmapCache.java  VolleyCallback.java  VolleyRequest.java
app/src/main/java/com/duosat/tv/image/: CircleTransform.java  RoundRectTransform.java  SquareTransform.java
app/src/main/java/com/duosat/tv/main/: CatchUpPlayerActivity.java  CatchUpTVActivity.java  LiveActivity.java  LoginActivity.java  MainActivity.java  VideoDetailsDialog.java  VideoPlayerActivity.java  ViewPagerCarouselFragment.java  VodActivity.java
app/src/main/java/com/duosat/tv/model/: ArrayChannelItem.java  (+6 more)
app/src/main/res/drawable/: back_white_rect.xml  btn_highlight.xml  button_back.xml  catchup_mark_back.xml  channel_menu_item.xml  edt_bg_selected.xml  edt_bg_selector.xml  lang_selector.xml  loading_progress.xml  login_item.xml  menu_item.xml  player_closed_caption.xml  player_forward_10.xml  player_pause.xml  player_play.xml  player_replay_10.xml  player_skip_next.xml  player_skip_previous.xml  progress_icon.xml  protect_rect.xml  rounded_corner.xml  selection_back_video_theme.xml  selector_carousel_page_indicator.xml
app/src/main/res/layout/: account_setting_dialog.xml  activity_video_player.xml  catchup_tv_layout.xml  exo_playback_control_view.xml  item_catchup_date.xml  item_menu.xml  item_screenshot.xml  item_video.xml  live_channel_epg_item.xml  live_channel_menu_item.xml  live_layout.xml  live_main_menu_item.xml  login_layout.xml  main_layout.xml  movie_detail_dialog.xml  protection_dialog.xml  view_pager_carousel_fragment.xml  view_pager_carousel_view.xml  vod_layout.xml
app/src/main/res/values/: colors.xml  demens.xml  strings.xml  styles.xml
app/src/test/java/com/duosat/tv/: ExampleUnitTest.java
(+10 files in other folders)
